--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 3</title>
-    <!--<link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    -->
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" 
+    integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" 
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
-<!-- <body> -->
 <body> <!-- For part 6: onload="initializeLonLat()"-->
     <h2 id="hello_tag">Hello World!</h2>
-    <h2>Example testing.</h2>
+    <h2>It's the launchpad equivalent of a model solar system! Yippee!</h2> <!--delete later-->
+    <h1 id="planetName">The Sun</h1>
+    <h2>Press the Launchpad to get a Planet</h2>
+    <img id="planetImg" 
+    src="https://solarsystem.nasa.gov/rails/active_storage/blobs/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBamRTIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--8f58db6031cb325cfbaf366a330cf78148c0444a/Sun.png?disposition=attachment">
+    
+    <!--a h1 with the info compiled from the API-->
 
     <!--<button id="addLongitude" onclick="addLongitude(10)">add 10 degrees to longitude</button> 
     <button id="subLongitude" onclick="subLongitude(10)">subtract 10 from longitude</button>
@@ -29,3 +35,7 @@
     <div id="drawingArea">
 
     </div>
+    <script src="bodies.js"></script>
+    <script src="launchpad.js"></script>
+</body>
+</html>
