--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body> <!-- For part 6: onload="initializeLonLat()"-->
-    <h2 id="hello_tag">Hello World!</h2>
-    <h2>It's the launchpad equivalent of a model solar system! Yippee!</h2> <!--delete later-->
-    <h1 id="planetName">The Sun</h1>
-    <h2>Press the Launchpad to get a Planet</h2>
+    <h1 id="planetName">☉ The Solar System ☉</h1>
     <img id="planetImg" 
     src="https://solarsystem.nasa.gov/rails/active_storage/blobs/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBamRTIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--8f58db6031cb325cfbaf366a330cf78148c0444a/Sun.png?disposition=attachment">
     
@@ -32,9 +29,12 @@
 
 
 
-    <div id="drawingArea">
-
+    <div id="infoCard">
+        Press the Launchpad to get a Planet
     </div>
+    <p id="symbol">The astronomical symbol for the Sun is a shield with a circle inside.
+         Some believe this inner circle, or "boss" represents a central sun spot.</p>
+
     <script src="bodies.js"></script>
     <script src="launchpad.js"></script>
 </body>
